; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_extent-tree.c_get_extent_data_ref_hash2.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_extent-tree.c_get_extent_data_ref_hash2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_extent_data_ref_hash2(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 -1, i32* %7, align 4
  store i32 -1, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = call i32 @calc_crc32c(i32 %9, i32* %4, i32 4)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @calc_crc32c(i32 %11, i32* %5, i32 4)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @calc_crc32c(i32 %13, i32* %6, i32 4)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %7, align 4
  %16 = shl i32 %15, 31
  %17 = load i32, i32* %8, align 4
  %18 = xor i32 %16, %17
  ret i32 %18
}

declare dso_local i32 @calc_crc32c(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
